project rollovers, white space fix

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -261,6 +261,7 @@ h3
     float: left
     display: block
     margin-bottom: 60px
+    white-space: nowrap
 
   a.middle
     margin-left: 40%
@@ -298,6 +299,11 @@ h3
     position: relative
   img
     width: 100%
+    -webkit-filter: grayscale(100%)
+    +transition(0.25s ease-in-out)
+    &:hover,
+    &:focus
+      -webkit-filter: grayscale(0)
   div
     position: absolute
     top: auto
